# ghc-proxy

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  api.md  claude-code.md  configuration.md  getting-started.md  index.md
public/: dashboard.html  metrics.html  requests.html
src/: anthropic.rs  auth.rs  config.rs  filters.rs  gemini.rs  lib.rs  main.rs  responses.rs  server.rs  setup.rs  state.rs  store.rs  translate.rs  util.rs
tests/: integration.rs
