[package]
name = "ghc-proxy"
version = "1.1.0"
edition = "2021"
description = "GitHub Copilot API Proxy - Provides OpenAI and Anthropic compatible endpoints via GitHub Copilot (Rust port of ghc-tunnel)"
license = "MIT"
repository = "https://github.com/MartinForReal/ghc-proxy"
default-run = "ghc-proxy"

[lib]
name = "ghc_proxy"
path = "src/lib.rs"

[[bin]]
name = "ghc-proxy"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["fs"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_norway = "0.9"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tiktoken-rs = "0.12"
dialoguer = { version = "0.12", default-features = false, features = ["fuzzy-select"] }
self_update = "0.44"
toml = "0.8"

[dev-dependencies]
